--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Setup
-title:        Project or Site name
-tagline:      A responsive theme for your project on GitHub Pages
+title:        Airizse 
+tagline:      a baneling
 baseurl:      ""
 paginate:     1
 
 # About/contact
 author:
-  name:       Author name
-  url:        http://yourhomepage.com 
+  name:       Airizse
+  url:        https://airizse.github.io/ 
 
 # Gems
 gems:
